--- a/src/App.scss
+++ b/src/App.scss
@@ -11,8 +11,10 @@ a{
 }
 
 #header{
-  background: #032541;
+
+  background: #85a4e7;
   .header{
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -21,11 +23,20 @@ a{
       border-radius: 10px;
       padding: 5px;
     }
-    &--input{
-      border-radius: 10px;
-      padding: 5px;
-      outline: none
-    }
+
+
+    &--input {
+      color: white;
+        border: 2px solid #143954;
+        border-radius: 40px;
+        background: transparent;
+        outline: none;
+        padding: 8px 10px;
+        font-size: 15px;
+        cursor: auto;
+      }
+
+
 
     &--nav a{
       margin: 0 20px;
@@ -40,29 +51,22 @@ a{
   }
 }
 
-#popular{
-  .popular{
-    padding: 50px 0;
-    display: grid;
-    grid-template-columns: repeat(4,4fr);
-    grid-column-gap: 5px;
-    grid-row-gap: 11px;
-    justify-items: center;
-    align-items: start;
-  }
-}
+
 
 .details{
   padding: 120px 0;
   &--inform{
+    height: 70vh;
     display: flex;
     grid-column-gap: 60px;
+    justify-content: space-between;
   }
   &--item{
+    background: rgba(164, 163, 163, 0.4);
+    padding: 50px 30px;
+    border-radius: 20px;
+    width: 50%;
     color: white;
-    font-family: Arial, sans-serif;
-    line-height: 40px;
-    padding-top: 20px;
   }
   &--genres{
     display: grid;
@@ -117,4 +121,166 @@ a{
   grid-row-gap: 11px;
   justify-items: center;
   align-items: start;
+}
+#home {
+  height: 100%;
+
+  .home {
+    padding: 100px 0;
+
+    &--logo{
+      text-align: start;
+      padding: 200px 0 0 0;
+      color: white;
+      font-weight: 800;
+      h1{
+        font-size: 60px;
+        margin: 20px 0 ;
+      }
+      h2{
+        font-size: 35px;
+
+      }
+
+    }
+
+    &--input {
+      width: 70%;
+      border: 2px solid #85a4e7;
+      color: black;
+      border-radius: 40px;
+      background: white;
+      outline: none;
+      padding: 12px 10px;
+      font-size: 15px;
+      cursor: auto;
+
+
+    }
+
+    &--btn {
+      font-size: 13px;
+      border: 2px solid #133124;
+      border-radius: 40px;
+      padding: 12px 35px;
+      color: rgb(31, 33, 116);
+      background:#85a4e7;
+      transition: .2s;
+      cursor: pointer;
+
+      &:focus {
+        background: 0;
+        color: #40AB7E;
+      }
+    }
+
+  }
+}
+#popular {
+  scroll-behavior: smooth;
+  padding: 100px 0;
+
+  h1 {
+    text-align: center;
+    margin-bottom: 40px;
+
+  }
+
+  .popular {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6rem;
+    flex-wrap: wrap;
+
+
+    &--card {
+
+      border: 1px solid rgba(73, 79, 215, 0.62);
+      padding: 20px ;
+      border-radius: 10px;
+      -webkit-box-shadow: 0px 0px 27px 6px rgba(83, 88, 183, 0.62);
+      -moz-box-shadow: 0px 0px 27px 6px rgba(37, 41, 117, 0.62);
+      box-shadow: 0px 0px 27px 6px rgba(11, 46, 131, 0.2);
+      //-webkit-box-shadow: 0px 0px 27px 6px rgba(255, 255, 255, 0.2);
+      //-moz-box-shadow: 0px 0px 27px 6px rgba(255, 255, 255, 0.2);
+      //box-shadow: 0px 0px 27px 6px rgba(255, 255, 255, 0.2);
+
+      h2 {
+        color: white;
+        text-align: center;
+        margin-top: 10px;
+        font-size: 15px;
+      }
+    }
+    &--pagination{
+      scroll-behavior: smooth;
+      display: flex;
+      justify-content: space-between;
+      button{
+        padding: 10px 20px;
+      }
+    }
+  }
+
+}
+#details {
+  padding: 50px 0;
+
+  .details {
+    height: 75vh;
+    padding: 50px 0;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    &__images{
+
+    }
+
+    &--info {
+      background: rgba(164, 163, 163, 0.4);
+      padding: 50px 30px;
+      border-radius: 20px;
+      width: 50%;
+      color: white;
+
+      h2 {
+        margin: 20px 0 0 0;
+      }
+
+      &__vote{
+        width: 60px;
+        height: 60px;
+        background: transparent;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border:5px solid #338c01;
+      }
+      &__genres{
+        display: flex;
+        p{
+          margin: 7px 10px 0 0;
+        }
+      }
+      &__card{
+        width: 30%;
+        margin: 20px 0;
+        display: flex;
+        justify-content: space-between;
+        &--vote{
+          width: 60px;
+          height: 60px;
+          background: transparent;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border:5px solid #338c01;
+        }
+
+      }
+    }
+  }
 }
